[package]
name = "qd-cgns-rs"
version = "0.1.0"
edition = "2024"
links = "cgns"

[dependencies]
num_enum = "0.7.5"

[build-dependencies]
bindgen = "0.72.1"
regex = "1.12.3"

[lints.rust]
unused = "deny"
warnings = "deny"
unused_qualifications = "deny"
nonstandard_style = "deny"
future_incompatible = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
cargo_common_metadata = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
